--- a/style.css
+++ b/style.css
@@ -1,8 +1,21 @@
+:root {
+    --theme-color: #17a2b8;;
+    --btn-clr: #17a2b8;
+  }
+
+  *{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+  }
+
 html,body{
     margin: 0;
     padding: 0;
 }
-
+nav {
+    background: var(--theme-color);
+}
 ul.filters{
     display: block;
     width: 100%;
@@ -29,7 +42,7 @@ ul.filters > li > a:hover{
 
 ul.filters > li.active > a{
     color: #fff;
-    background-color: blue;
+    background: var(--btn-clr);
 }
 
 .card{
@@ -71,7 +84,7 @@ ul.filters > li.active > a{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 36, 194, 0.623);
+    background: rgba(64, 224, 208, 0.479);
     z-index: 10;
     display: flex;
     align-items: center;
